force-app/main/default/objects/mcdm_15__Submission__c/mcdm_15__Submission__c.object-meta.xml
<CustomObject>
    <description>Represents a Sendable Asset to be submitted for approval. Pairs a SendableRecord and JourneyActivity personalization.</description>
    <label>MCDM Submission</label>
    <nameField>
        <displayFormat>DMS-{000000}</displayFormat>
        <label>MCDM Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCDM Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>