force-app/main/default/objects/mcdm_15__Submission__c/fields/mcdm_15__SubmissionSendSettings__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__SubmissionSendSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submission Send Settings</label>
    <referenceTo>mcdm_15__SubmissionSendSettings__c</referenceTo>
    <relationshipLabel>Submissions</relationshipLabel>
    <relationshipName>Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>